--- a/sheets/style.css
+++ b/sheets/style.css
@@ -1,3 +1,96 @@
+:root {
+  --white:#DDDDDD;
+  --black:#222831;
+  --blue:#486c91;
+  --red:#F05454;
+}
 
+#nameTitleCont {
+  width: 60rem;
+  font-family: "Montserrat", system-ui;
+  text-transform: uppercase;
+  font-size: 2.6em;
+  color: var(--black);
+  position: relative;
+  left: 40%;
+  margin-top: 10rem;
+  z-index: 9;
+  margin-bottom: 10rem;
+}
+
+#mainCont {
+  background-color: var(--blue);
+  width: 100%;
+  height: 90rem;
+  display: flex;
+  justify-content: center;
+}
+
+#carouselCont {
+  margin-top: 5rem;
+  width: 50rem;
+  height: 70rem;
+  background-color: var(--black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cardImg {
+  width: 10rem;
+}
+
+.card {
+  width: 40rem;
+  height: 60rem;
+}
+
+#card1 {
+  z-index: 9;
+  display: flex;
+}
+
+#card2 {
+  z-index: 9;
+  display: flex;
+}
+
+#card3 {
+  z-index: 9;
+  display: flex;
+}
+
+#card4 {
+  z-index: 9;
+  display: flex;
+}
+
+#card5 {
+  z-index: 9;
+  display: flex;
+}
+
+#card9 {
+  z-index: 9;
+  display: flex;
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  background-color: var(--white);
+  box-sizing: border-box;
+  font-size: 1.6rem;
+}
 
 /*# sourceMappingURL=style.css.map */
